--- a/src/app/first-section/first-section.component.html
+++ b/src/app/first-section/first-section.component.html
@@ -1,11 +1,10 @@
-<div class="content">
-    <div class="left-content">
+<div id="first-section" class="content">
+    <img class="background-section" src="assets/background.png" alt="">
+    <div data-aos="fade-up" class="left-content">
         <img class="my-profile" src="assets/my-photo.png">
         <img class="behind_the_picture" src="assets/behind_the_picture.png">
     </div>
-
-
-    <div class="right-content">
+    <div data-aos="fade-down" class="right-content">
         <span class="vertikal" [ngClass]="{'deutsch': isGerman}">{{ 'I am' | translate }}</span>
         <div class="column">
             <span class="name"> <b>Artur Marbach</b> <br></span>
@@ -13,15 +12,11 @@
             <a href="#contact"><button [class.deutsch]="currentLanguage === 'de'" [ngClass]="{'deutsch': isGerman}"
                     class="button">{{ 'BUTTON.LETS_TALK' | translate }}</button></a>
         </div>
-
     </div>
-
-
     <div class="scroll-down-vertikal box">
         <span>{{"Scroll down" | translate}}</span>
         <img class="up" src="assets/up.png" alt="">
     </div>
-
     <div class="contact">
         <div class="line"></div>
         <div class="logo">
@@ -39,50 +34,4 @@
             <a [href]="'mailto:' + 'Marbach.A' + '&#64;' + 'gmx.net'">Marbach.A&#64;gmx.net</a>
         </span>
     </div>
-    <img class="background" src="assets/background.png" alt="">
-
 </div>
-
-
-
-
-
-
-<!-- 
-<div id="first-section" class="first-section">
-    <img class="behind_the_picture" src="assets/behind_the_picture.png">
-    <div class="contact">
-        <div class="line"></div>
-        <div class="logo">
-            <a routerLink="">
-                <img (click)="goToUrl('g')"  src="assets/github.png" alt="">
-            </a>
-            <a href="#contact">
-                <img  src="assets/mail.png" alt="">
-            </a>
-            <a routerLink="">
-                <img (click)="goToUrl('l')"  src="assets/linkIn.png" alt="">
-            </a>
-        </div>
-        <span class="e-mail">
-            <a [href]="'mailto:' + 'Marbach.A' + '&#64;' + 'gmx.net'">Marbach.A&#64;gmx.net</a>
-          </span>
-    </div>
-    <img data-aos="fade-right" class="my-profile" src="assets/my-photo.png">
-
-    <div class="scroll-down-vertikal box">
-        <span>{{"Scroll down" | translate}}</span>
-        <img class="up" src="assets/up.png" alt="">
-    </div>
-
-    <div data-aos="fade-down" [class.deutsch]="currentLanguage === 'de'" class="right-section">
-       
-            <span   class="vertikal" [ngClass]="{'deutsch': isGerman}">{{ 'I am' | translate }}</span>
-            <div  class="column">
-                <span  class="name"> <b>Artur Marbach</b> <br></span>
-                <span  class="front-end-developer">Frontend {{ 'Developer' | translate }}</span>
-                <a  href="#contact"><button [class.deutsch]="currentLanguage === 'de'" [ngClass]="{'deutsch': isGerman}"    class="button">{{ 'BUTTON.LETS_TALK' | translate }}</button></a>
-        </div>
-    </div>
-    <img class="background" src="assets/background.png" alt="">
-</div> -->
