--- a/src/app/inprint/inprint.component.scss
+++ b/src/app/inprint/inprint.component.scss
@@ -1,4 +1,4 @@
-.inprint-content{
+.inprint-content-de {
     margin-top: 50px;
     color: white;
     position: relative;
@@ -6,19 +6,27 @@
     padding-right: 100px;
 }
 
-a{
+.inprint-content-en {
+    margin-top: 50px;
+    color: white;
+    position: relative;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+a {
     text-decoration: none;
     color: white;
 }
 
-.go-back{
+.go-back {
     position: absolute;
     right: 100px;
     transform: rotate(90deg);
     cursor: pointer;
 }
 
-.go-back-hover{
+.go-back-hover {
     position: absolute;
     right: 100px;
     transform: rotate(90deg);
@@ -28,14 +36,26 @@ a{
     cursor: pointer;
 }
 
- .go-back-hover:hover {
+.go-back-hover:hover {
     opacity: 1;
 }
 
-
-@media screen and (max-width:950px){
-    .inprint-content{
+@media screen and (max-width:950px) {
+    .inprint-content-de {
         padding-left: 25px;
         padding-right: 25px;
+    }
+
+    .inprint-content-en {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+
+    .go-back {
+        right: 25px;
+    }
+
+    .go-back-hover {
+        right: 25px;
     }
 }
