--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,9 +1,8 @@
-.about-me-section{
+.about-me-section {
     position: relative;
     padding-left: 100px;
     padding-top: 80px;
     background-color: #141D2F;
-    z-index: 20;
     display: flex;
     color: white;
     padding-bottom: 80px;
@@ -11,61 +10,71 @@
     font-size: 16px;
 }
 
-.left-section{
-    width: 40%;
-   
+.background-shadow-img {
+    height: 600px;
+    width: 600px;
+    position: absolute;
+    top: 160px;
+    right: -200px;
+    z-index: 1;
+    display: none;
 }
 
-h1{
+.left-section {
+    width: 40%;
+    z-index: 5;
+}
+
+h1 {
     font-size: 88px;
     padding-left: 0;
 }
 
-h1.deutsch{
+h1.deutsch {
     font-size: 60px;
 }
 
-.right-section{
+.right-section {
     width: 50%;
     padding-left: 150px;
     padding-top: 100px;
+    z-index: 5;
 }
 
-.profile-circle{
+.profile-circle {
     border: 4px solid #1CDAE6;
     border-radius: 50%;
-
 }
 
 .img {
-        border-radius: 50%;
-        height: 500px;
-        width: 500px;
-        object-fit: cover;
-        object-position: center;
+    border-radius: 50%;
+    height: 500px;
+    width: 500px;
+    object-fit: cover;
+    object-position: center;
 }
 
-
-
-.profile-circle-container{
+.profile-circle-container {
     display: flex;
     align-items: center;
 }
 
-.decorate-line{
+.decorate-line {
     width: 100%;
     height: 4px;
     background-color: #1CDAE6;
     z-index: 2;
 }
 
-.info{
+.info {
     display: flex;
     padding-top: 36px;
-    >img:hover{
+
+    >img:hover {
         scale: 1.25;
     }
-    >img{
+
+    >img {
         cursor: pointer;
         object-fit: cover;
         padding-left: 30px;
@@ -75,59 +84,58 @@ h1.deutsch{
     }
 }
 
-.background-shadow{
-    height: 600px;
-    width: 600px;
-    position: absolute;
-    top: 0px;
-    right: -300px;
+@media screen and (max-width: 1440px) {
+    .background-shadow-img {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 1250px) {
-    h1{
+    h1 {
         font-size: 80px;
     }
 }
 
-@media screen and (max-width:1200px){
-    .profile-circle-container{
-       display: none;
-    }
-
-    h1.deutsch{
-        font-size: 80px;
-    }
-    .right-section{
+@media screen and (max-width:1200px) {
+    .profile-circle-container {
         display: none;
     }
 
-  .left-section{
-    width: 100%;
-    padding-right: 100px;
-  }
+    h1.deutsch {
+        font-size: 80px;
+    }
+
+    .right-section {
+        display: none;
+    }
+
+    .left-section {
+        width: 100%;
+        padding-right: 100px;
+    }
 }
 
-@media screen and (max-width: 850px){
-    .about-me-section{
+@media screen and (max-width: 850px) {
+    .about-me-section {
         padding-left: 25px;
     }
 
-    .left-section{
+    .left-section {
         padding-right: 25px;
         z-index: 10;
     }
 }
 
-@media screen and (max-width: 700px){
-    h1{
+@media screen and (max-width: 700px) {
+    h1 {
         font-size: 64px;
     }
 
-    h1.deutsch{
+    h1.deutsch {
         font-size: 64px;
     }
 
-    .info{
+    .info {
         align-items: center;
     }
 }
@@ -136,11 +144,12 @@ h1.deutsch{
     h1 {
         font-size: 40px;
     }
-    h1.deutsch{
+
+    h1.deutsch {
         font-size: 40px;
     }
 
-    .about-me-section{
+    .about-me-section {
         padding-top: 120px;
     }
 }
