--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,5 @@
 body {
   background-color: #141D2F;
     scroll-behavior: smooth!important;
-  }
-
-  .container {
-    max-width: 1440px;
-    
- 
+    position: relative;
   }
