--- a/src/app/first-section/first-section.component.scss
+++ b/src/app/first-section/first-section.component.scss
@@ -1,13 +1,10 @@
 .content {
-    max-width: 1440px;
     position: relative;
     background-color: #141D2F;
     height: 85vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    
 }
 
 .left-content {
@@ -17,10 +14,8 @@
     position: relative;
     width: 45%;
     height: 100%;
-    /* Passende Höhe festlegen */
+    z-index: 9;
 }
-
-
 
 .my-profile {
     z-index: 3;
@@ -30,11 +25,9 @@
 
 .behind_the_picture {
     position: absolute;
-    /* Damit es hinter dem Profilbild bleibt */
     z-index: 1;
     width: 100%;
     height: auto;
-
 }
 
 .right-content {
@@ -44,13 +37,13 @@
     display: flex;
 }
 
-.background {
+.background-section {
     position: absolute;
-    width: 100%;
-    top: 130px;
-    z-index: 2;
+    max-width: 100%;
+    top: 250px;
+    z-index: 1;
+    display: none;
 }
-
 
 a {
     color: white;
@@ -76,28 +69,24 @@ a {
     cursor: pointer;
 }
 
-
-
-
+.button.deutsch {
+    max-width: 250px;
+}
 
 .button:hover {
     background-color: #4441E5;
     scale: 1.1;
-
 }
 
 .name {
     color: white;
-
     font-size: 53px;
 }
 
 
 .front-end-developer {
     color: #4441E5;
-
     font-size: 40px;
-
 }
 
 .scroll-down-vertikal {
@@ -113,12 +102,10 @@ a {
     /* Mischung von vertikaler und horizontaler Ausrichtung */
     display: inline-block;
     transform: rotate(360deg);
-    /* Drehen des Textes um 180 Grad */
 }
 
 .box {
     animation: move 2.5s ease-in-out infinite;
-    /* Verwenden Sie die move-Animation */
 }
 
 @keyframes move {
@@ -138,12 +125,9 @@ a {
     }
 }
 
-
 .up {
     margin-top: 10px;
     transform: rotate(180deg);
-
-
 }
 
 .vertikal {
@@ -156,6 +140,10 @@ a {
     transform: rotate(180deg);
     transform-origin: center top;
     /* Ursprungspunkt Mitte oben */
+}
+
+.vertikal.deutsch {
+    font-size: 30px;
 }
 
 .line {
@@ -185,15 +173,14 @@ a {
     }
 }
 
-
 .contact {
     position: absolute;
     bottom: 40px;
+    left: 100px;
     display: flex;
     z-index: 99;
 
     #img {
-
         height: 12px !important;
         width: 12px !important;
     }
@@ -209,6 +196,12 @@ a {
     cursor: pointer;
 }
 
+@media screen and (max-width:1440px) {
+    .background-section {
+        display: block;
+    }
+}
+
 @media screen and (max-width:1100px) {
     .content {
         flex-direction: column;
@@ -220,427 +213,122 @@ a {
         height: 40vh;
     }
 
-    .my-profile{
+    .my-profile {
         width: 50%;
     }
 
-    .scroll-down-vertikal{
+    .scroll-down-vertikal {
         display: none;
     }
 
-    .right-content{
+    .right-content {
         width: 100%;
         display: flex;
         justify-content: center;
     }
 
-    .behind_the_picture{
+    .behind_the_picture {
         width: 50%;
         margin-top: 160px;
         z-index: 1;
     }
 
-    .contact{
+    .contact {
         bottom: -108px;
         left: 100px;
     }
 
-    .button{
+    .button {
         margin-top: 0;
     }
 }
 
-@media screen and (max-width:950px){
-    .contact{
-        left:25px
+@media screen and (max-width:950px) {
+    .contact {
+        left: 25px
     }
 
-    .e-mail{
+    .e-mail {
         display: none;
     }
 }
 
-@media screen and (max-width:900px){
-    .my-profile{
+@media screen and (max-width:900px) {
+    .my-profile {
         max-width: 63%;
         min-width: 500px;
     }
 
-    .behind_the_picture{
+    .behind_the_picture {
         max-width: 63%;
         min-width: 500px;
     }
 }
 
-@media screen and (max-width:600px){
-    .name{
+@media screen and (max-width:600px) {
+    .name {
         font-size: 40px;
     }
 
-    .front-end-developer{
+    .front-end-developer {
         font-size: 32px;
     }
 
-    .vertikal{
+    .vertikal {
         font-size: 36px;
         margin-top: 101px;
     }
+
+    .vertikal.deutsch {
+        font-size: 23px;
+    }
 }
 
-@media screen and (max-width:550px){
-    .my-profile{
+@media screen and (max-width:550px) {
+    .my-profile {
         min-width: 100%;
     }
 
-    .behind_the_picture{
+    .behind_the_picture {
         min-width: 100%;
     }
 
-    .right-content{
+    .right-content {
         margin-top: 55px;
     }
 
-    .left-content{
+    .left-content {
         height: 50vh;
+    }
+
+    .background {
+        height: 350px;
     }
 }
 
-@media screen and (max-width:450px){
-    .name{
+@media screen and (max-width:450px) {
+    .name {
         font-size: 32px;
     }
 
-    .front-end-developer{
+    .front-end-developer {
         font-size: 26px;
     }
 
-    .vertikal{
+    .vertikal {
         font-size: 28px;
         margin-top: 79px;
     }
 
-    .button{
+    .vertikal.deutsch {
+        font-size: 19px;
+    }
+
+    .button {
         margin-top: 16px;
     }
 
-    .line{
+    .line {
         width: 66px;
     }
 }
-
-// @media screen and (max-width: 1380px) {
-//     .right-section {
-//         padding-left: 600px;
-//     }
-
-
-// }
-
-// @media screen and (max-width: 1330px) {
-//     .name {
-//         font-size: 50px !important;
-//     }
-
-//     .front-end-developer {
-//         font-size: 38px;
-//     }
-
-//     .button {
-//         margin-left: 100px;
-//     }
-// }
-
-
-// @media screen and (max-width: 1220px) {
-//     .right-section {
-//         padding-left: 560px;
-//     }
-// }
-
-// @media screen and (max-width: 1200px) {
-//     .right-section {
-//         padding-top: 700px;
-//         padding-left: 20%;
-//         z-index: 99;
-//         padding-bottom: 200px;
-//         padding-right: 0;
-//     }
-
-
-//     .name {
-//         padding-left: 0 !important;
-//     }
-
-//     .column {
-//         width: 400px;
-//     }
-
-//     .button {
-//         margin-top: 5px;
-//     }
-
-//     .contact {
-//         bottom: -110px;
-//     }
-
-//     .background {
-//         height: 235px;
-//         bottom: 97px;
-//     }
-
-//     a {
-//         >img {
-//             width: 50px;
-//             height: 50px;
-//             padding-left: 48px;
-//             cursor: pointer;
-
-//             &:hover {
-//                 scale: 1.2;
-//             }
-//         }
-//     }
-
-//     .e-mail {
-//         display: none;
-//     }
-
-//     .line {
-//         width: 300px;
-//     }
-
-//     .my-profile {
-//         width: 70%;
-//         padding-left: 15%;
-//         object-fit: cover;
-//         padding-bottom: 50px;
-//     }
-
-//     .behind_the_picture {
-//         width: 80%;
-//         padding-left: 10%;
-//         padding-top: -250px;
-//     }
-
-//     .scroll-down-vertikal {
-//         display: none;
-//     }
-
-//     .first-section {
-//         padding-bottom: 50px;
-//     }
-
-//     .vertikal {
-//         padding-left: 55px;
-//         font-size: 41px;
-//         padding-top: 80px;
-//         transform: rotate(270deg);
-//         writing-mode: initial;
-//     }
-
-//     .vertikal.deutsch {
-//         margin-top: -25px;
-//         padding-top: 100px;
-//     }
-
-//     .front-end-developer {
-//         padding-left: 0;
-//     }
-
-//     .name {
-//         padding-left: 0;
-//     }
-// }
-
-// @media screen and (max-width: 1030px) {
-
-
-//     .right-section {
-//         padding-left: 15%;
-//     }
-
-
-// }
-
-// @media screen and (max-width: 900px) {
-
-//     .my-profile {
-//         padding-left: 10%;
-//     }
-
-//     .right-section {
-//         padding-left: 5%;
-//     }
-
-
-// }
-
-// @media screen and (max-width: 760px) {
-
-
-//     .line {
-//         width: 100px;
-//     }
-
-//     .right-section {
-//         padding-left: 2%;
-//     }
-
-
-
-// }
-
-// @media screen and (max-width:700px) {
-//     .my-profile {
-//         width: 85%;
-//         padding-left: 5%;
-//     }
-// }
-
-// @media screen and (max-width: 660px) {
-//     .button {
-//         margin-left: 50px;
-//     }
-
-//     .vertikal {
-//         font-size: 25px;
-//         margin-top: -17px !important;
-//         margin-right: 0;
-//         width: 56px;
-//     }
-
-//     .vertikal.deutsch {
-//         width: 100px;
-//         margin-top: -84px !important;
-//         font-size: 20px;
-//     }
-
-//     .name {
-//         font-size: 40px !important;
-//     }
-
-//     .front-end-developer {
-//         font-size: 30px;
-//     }
-
-//     .button {
-//         margin-top: 20px;
-//     }
-
-
-// }
-
-// @media screen and (max-width:580px) {
-
-
-//     .vertikal {
-//         padding-left: 60px;
-//         margin-top: -15px !important;
-//         margin-right: -40px !important;
-//         padding-top: 0;
-//     }
-
-//     .vertikal.deutsch {
-//         padding-top: 0;
-//         margin-left: -17px;
-//     }
-
-
-// }
-
-// @media screen and (max-width: 566px) {
-
-
-//     .my-profile {
-//         width: 100%;
-//         padding-left: 0;
-//     }
-
-//     .column {
-//         max-width: 350px;
-//     }
-
-// }
-
-
-
-
-// @media screen and (max-width:500px) {
-//     .my-profile {
-//         height: 100%;
-//         top: 120px;
-//         padding-left: 0;
-//     }
-
-//     .column {
-//         max-width: 300px;
-//     }
-
-//     a {
-//         >img {
-//             width: 35px;
-//             height: 35px;
-//             padding-left: 24px;
-//         }
-//     }
-
-//     .name {
-//         font-size: 32px !important;
-//     }
-// }
-
-// @media screen and (max-width:460px) {
-//     .right-section {
-//         padding-left: 0;
-//     }
-
-//     .column {
-//         max-width: 300px;
-//     }
-
-
-
-//     .front-end-developer {
-//         font-size: 26px;
-//     }
-// }
-
-// @media screen and (max-width:440px) {
-//     .vertikal {
-//         margin-left: -15%;
-//     }
-
-//     .name {
-//         font-size: 38px !important;
-//     }
-
-//     .front-end-developer {
-//         font-size: 30px !important;
-//     }
-// }
-
-// @media screen and (max-width:400px) {
-
-//     .my-profile {
-//         height: 92%;
-//     }
-
-//     .name {
-//         font-size: 32px !important;
-//     }
-
-//     .front-end-developer {
-//         font-size: 24px !important;
-//     }
-
-//     .column {
-//         max-width: 250px;
-//     }
-
-//     .button {
-//         margin-left: 40px;
-//     }
-// }
-
-
-// @media screen and (max-width:380px) {}
