--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,6 +6,7 @@ footer {
     padding-left: 100px;
     padding-right: 100px;
     position: relative;
+    overflow: hidden;
 }
 
 .content {
@@ -43,13 +44,14 @@ h2 {
     color: #1CDAE6;
 }
 
-.bottom-line {
+.footer-line {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: -250px;
+    width: 180vw;
     height: 4px;
     background-color: #1CDAE6;
+    display: none;
 }
 
 a {
@@ -57,7 +59,6 @@ a {
     color: white;
     cursor: pointer;
     margin-top: 0;
-
 
     >img {
         width: 40px;
@@ -69,14 +70,11 @@ a {
             scale: 1.2;
         }
     }
-
 }
 
 .inprint {
-
     &:hover {
         border-bottom: 2px solid #1CDAE6;
-
     }
 }
 
@@ -86,10 +84,14 @@ a {
 
     &:hover {
         border-bottom: 2px solid #1CDAE6;
-
     }
 }
 
+@media screen and (max-width:1440px) {
+    .footer-line {
+        display: block;
+    }
+}
 
 @media screen and (max-width:1000px) {
     .content {
@@ -104,17 +106,18 @@ a {
         padding-top: 16px;
     }
 
-    footer{
-        padding-left: 50px!important;
-        padding-right: 50px!important;
+    footer {
+        padding-left: 50px !important;
+        padding-right: 50px !important;
     }
 
     .inprint {
         display: none;
     }
 }
+
 @media screen and (max-width:500px) {
-.name{
-    font-size: 18px!important;
-}
+    .name {
+        font-size: 18px !important;
+    }
 }
