--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
-<nav>
+<nav id="nav">
   <a class="name" href="/"> Ar<span class="colored-letter">t</span>ur</a>
-
   <div [class.deutsch]="currentLanguage === 'de'" class="link-section">
     <a href="#about-me">{{ 'About me' | translate }}</a>
     <a href="#skills">{{ 'Skills' | translate }}</a>
@@ -9,15 +8,14 @@
     <button (click)="switchLanguage('de')" [class.selected]="currentLanguage === 'de'">De</button>
   </div>
   <div class="menu display-none">
-
-    <a href="#" (click)="menuContent($event)">
+    <a id="header" href="#" (click)="menuContent($event)">
       <img class="btn-img" src="assets/menu.png" alt="">
       <img id="btn-hover" class="btn-img-hover" src="assets/menu-hover.png" alt="">
     </a>
   </div>
   <div id="mobile-content" class="menu-mobile display-none">
     <div class="menu-content ">
-      <img (click)="closeContent()" id="btn-hover" class="close-img" src="assets/menu-hover.png" alt="">
+      <img (click)="closeContent()" id="btn-hover" class="close-img" src="assets/close.png" alt="">
       <a (click)="closeContent()" href="#about-me">{{ 'About me' | translate }}</a>
       <a (click)="closeContent()" href="#skills">{{ 'Skills' | translate }}</a>
       <a (click)="closeContent()" href="#portfolio">Portfolio</a>
@@ -26,7 +24,6 @@
         <button (click)="switchLanguage('en')" [class.selected]="currentLanguage === 'en'">En</button>
         <button (click)="switchLanguage('de')" [class.selected]="currentLanguage === 'de'">De</button>
       </div>
-
     </div>
   </div>
 </nav>
