--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,11 +5,10 @@ nav {
     height: 15vh;
     background-color: #141D2F;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     z-index: 999;
     opacity: 1;
-
 
     >a {
         text-decoration: none;
@@ -18,9 +17,7 @@ nav {
 
 .link-section button {
     background-color: #141D2F;
-    /* Standard Hintergrundfarbe */
     border: 1px solid #1CDAE6;
-    /* Standard Rahmenfarbe */
     height: 32px;
     color: white;
     cursor: pointer;
@@ -34,9 +31,7 @@ nav {
 
 .link-section button.selected {
     background-color: #141D2F;
-    /* Standard Hintergrundfarbe */
     opacity: 1;
-    /* Transparenter Hintergrund für den ausgewählten Button */
 }
 
 .mobile-btn {
@@ -46,9 +41,7 @@ nav {
 
 .mobile-btn button {
     background-color: #141D2F;
-    /* Standard Hintergrundfarbe */
     border: 1px solid #1CDAE6;
-    /* Standard Rahmenfarbe */
     padding: 10px;
     color: white;
     cursor: pointer;
@@ -58,16 +51,14 @@ nav {
 
 .mobile-btn button.selected {
     background-color: #141D2F;
-    /* Standard Hintergrundfarbe */
     opacity: 1;
-    /* Transparenter Hintergrund für den ausgewählten Button */
 }
 
 .close-img {
     position: absolute;
     right: 25px;
-    top: 32px;
-
+    top: 50px;
+    object-fit: cover;
     cursor: pointer;
 }
 
@@ -80,7 +71,6 @@ nav {
     height: 100vh;
     background-color: rgb(42, 40, 40);
     text-decoration: none;
-
 }
 
 .menu-content {
@@ -91,9 +81,8 @@ nav {
     justify-content: center;
     height: 100vh;
 
-
     >img {
-        padding-top: 15px;
+        padding-top: 32px;
         width: 32px;
         height: 32px;
     }
@@ -105,7 +94,6 @@ nav {
         font-size: 24px;
     }
 
-
     >a:hover {
         border-bottom: 2px solid #1CDAE6;
     }
@@ -116,24 +104,17 @@ nav {
 }
 
 .menu {
-
     justify-content: end;
     position: relative;
-
     padding-top: 32px;
     padding-right: 100px;
 }
 
 .btn-img-hover {
     opacity: 0;
-    /* Anfangs unsichtbar */
     transition: opacity 0.3s ease;
-    /* Übergangseffekt */
-
     right: 0;
-    /* Links ausrichten */
     z-index: 1;
-    /* Z-Index über dem ersten Bild */
     cursor: pointer;
     padding-top: 32px;
     padding-right: 25px;
@@ -141,33 +122,24 @@ nav {
 
 .menu:hover .btn-img-hover {
     opacity: 1;
-    /* Bild einblenden beim Hover */
 }
 
 .menu .btn-img-hover {
     opacity: 0;
     display: none;
-    /* Anfangs unsichtbar */
     position: absolute;
-    /* Positionierung des Bildes */
     top: 0;
-    /* Oben ausrichten */
     right: 0;
-    /* Rechts ausrichten */
     cursor: pointer;
 }
 
 .menu:hover .btn-img-hover {
     display: block;
-    /* Bild einblenden beim Hover */
 }
 
 .menu:hover .btn-img {
     opacity: 0;
-    /* Erstes Bild ausblenden beim Hover */
 }
-
-
 
 .colored-letter {
     padding-left: 0;
@@ -182,7 +154,6 @@ nav {
     font-size: 48px;
     cursor: pointer;
 }
-
 
 .link-section {
     display: flex;
