--- a/src/app/inprint/inprint.component.html
+++ b/src/app/inprint/inprint.component.html
@@ -1,31 +1,124 @@
-<div class="inprint-content">
-
-    <img class="go-back" src="assets/zeiger-weiss.png" alt="Zurück" >
+<div *ngIf="isGerman" [ngClass]="{'deutsch': currentLanguage === 'de' || isGerman}" class="inprint-content-de">
+    <img class="go-back" src="assets/zeiger-weiss.png" alt="Zurück">
     <img (click)="showNormalContent()" class="go-back-hover" src="assets/zeiger-türkis.png" alt="">
 
-    <h1>Impressum</h1><h3>Allgemeine Angaben</h3><p><b>Internet: </b> <a href="https://portfolio.artur-marbach.de" target="_blank">https://portfolio.artur-marbach.de</a></p>
+    <h1>Impressum</h1>
+    <h3>Allgemeine Angaben</h3>
+    <p><b>Internet: </b> <a href="https://portfolio.artur-marbach.de"
+            target="_blank">https://portfolio.artur-marbach.de</a></p>
 
     <p><b>Name des Diensteanbieters:</b> Artur Marbach Andere</p>
-    
+
     <p><b>Vertreten durch:</b> Marbach</p>
-    
+
     <p><br></p>
-    
-    <h3>Anschrift und Kontakt:</h3><p>privat</p>
-    
+
+    <h3>Anschrift und Kontakt:</h3>
+    <p>privat</p>
+
     <p>strassburger stieg 5</p>
-    
+
     <p>22049 hamburg</p>
-    
+
     <p><b>Telefon:</b> <a href="tel:017632886660">017632886660</a></p>
-    
+
     <p><b>Email:</b> <a href="mailto:marbach.a@gmx.net">marbach.a&#64;gmx.net</a><br><br></p>
-    
-    <h3>Haftung für Links</h3><p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-    
-    <br><h3>Haftung für Inhalte</h3><p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und  Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.<br> <b>Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.</b><br> Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen  Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der  Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
-    
-    <br><h3>Urheberrecht</h3><p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
-    
-    <br><p>Erstellt von <a href="http://impressum-generator.info/" target="_blank">impressum-generator.info</a> - powered by <a href="https://abfindungshero.de/" target="_blank">abfindungshero.de</a><br><br></p>
+
+    <h3>Haftung für Links</h3>
+    <p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb
+        können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist
+        stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum
+        Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der
+        Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete
+        Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir
+        derartige Links umgehend entfernen.</p>
+
+    <br>
+    <h3>Haftung für Inhalte</h3>
+    <p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und
+        Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1
+        TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.<br> <b>Nach §§ 8 bis 10
+            TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde
+            Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit
+            hinweisen.</b><br> Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den
+        allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der
+        Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen
+        werden wir diese Inhalte umgehend entfernen.</p>
+
+    <br>
+    <h3>Urheberrecht</h3>
+    <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen
+        Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen
+        des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und
+        Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf
+        dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden
+        Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam
+        werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir
+        derartige Inhalte umgehend entfernen.</p>
+
+    <br>
+    <p>Erstellt von <a href="http://impressum-generator.info/" target="_blank">impressum-generator.info</a> - powered by
+        <a href="https://abfindungshero.de/" target="_blank">abfindungshero.de</a><br><br></p>
+</div>
+
+
+<div *ngIf="!isGerman" class="inprint-content-en">
+
+    <img class="go-back" src="assets/zeiger-weiss.png" alt="Back">
+    <img (click)="showNormalContent()" class="go-back-hover" src="assets/zeiger-türkis.png" alt="">
+
+    <h1>Imprint</h1>
+    <h3>General Information</h3>
+    <p><b>Website:</b> <a href="https://portfolio.artur-marbach.de"
+            target="_blank">https://portfolio.artur-marbach.de</a></p>
+
+    <p><b>Name of the service provider:</b> Artur Marbach Other</p>
+
+    <p><b>Represented by:</b> Marbach</p>
+
+    <p><br></p>
+
+    <h3>Address and Contact:</h3>
+    <p>Private</p>
+
+    <p>Strassburger Stieg 5</p>
+
+    <p>22049 Hamburg</p>
+
+    <p><b>Phone:</b> <a href="tel:017632886660">017632886660</a></p>
+
+    <p><b>Email:</b> <a href="mailto:marbach.a@gmx.net">marbach.a&#64;gmx.net</a><br><br></p>
+
+    <h3>Liability for Links</h3>
+    <p>Our offer contains links to external websites of third parties, whose contents we have no influence on.
+        Therefore, we cannot accept any responsibility for these external contents. The provider or operator of the
+        pages is always responsible for the contents of the linked pages. The linked pages were checked for possible
+        legal violations at the time of linking. Illegal contents were not recognizable at the time of linking. A
+        permanent control of the linked pages is not reasonable without concrete indications of a violation. Upon
+        becoming aware of legal violations, we will remove such links immediately.</p>
+
+    <br>
+    <h3>Liability for Content</h3>
+    <p>The content of our pages was created with the utmost care. However, we cannot guarantee the accuracy,
+        completeness, and currentness of the content. As service providers, we are responsible for our own content on
+        these pages according to general laws in accordance with § 7 Abs.1 TMG. <br> <b>According to §§ 8 to 10 TMG, we
+            are not obligated to monitor transmitted or stored third-party information or to investigate circumstances
+            that indicate illegal activity.</b><br> Obligations to remove or block the use of information according to
+        general laws remain unaffected. Liability in this regard is only possible from the point in time of knowledge of
+        a specific violation. Upon becoming aware of corresponding legal violations, we will remove this content
+        immediately.</p>
+
+    <br>
+    <h3>Copyright</h3>
+    <p>The content and works created by the site operators on these pages are subject to German copyright law. The
+        duplication, editing, distribution, and any form of utilization outside the limits of copyright require the
+        written consent of the respective author or creator. Downloads and copies of this page are only permitted for
+        private, non-commercial use. As far as the content on this page is not created by the operator, the copyrights
+        of third parties are observed. In particular, third-party content is marked as such. Should you still become
+        aware of a copyright infringement, we ask for an appropriate notice. Upon becoming aware of legal violations, we
+        will remove such content immediately.</p>
+
+    <br>
+    <p>Created by <a href="http://impressum-generator.info/" target="_blank">impressum-generator.info</a> - powered by
+        <a href="https://abfindungshero.de/" target="_blank">abfindungshero.de</a><br><br></p>
 </div>
