--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,7 +7,7 @@
         <div class="long-line"></div>
     </div>
     <span class="description">{{ "Portfolio" | translate}}</span>
-    <div data-aos="flip-left" class="development-section" *ngFor="let development of developments; let i = index"
+    <div data-aos="flip-left" data-aos-duration="1500" class="development-section" *ngFor="let development of developments; let i = index"
         [ngClass]="{'reverse': i % 2 === 1}">
         <div class="product-img"><img src="{{development.img}}" alt="will be added soon"></div>
         <div class="info-container">
